<resources>
    <string name="app_name">Smart Presence</string>
    <string name="fragment_name_introduction">Introduction</string>
    <string name="fragment_name_presence_detection">Detection</string>
    <string name="fragment_name_setting">Setting</string>
    <string name="signInWelcome">Welcome</string>
    <string name="signOutButton">sign out</string>
    <string name="plzSign">Please sign the agreement!</string>
    <string name="declaration_title"><![CDATA[Privacy Statement, Declaration, Agreement:]]></string>
    <string name="declaration_content">
        Please read carefully the following privacy statement of Smart Presence.\n
        Smart presence is collecting your personal information including locations, WiFi connection, email, address, etc. This application will access your locations or WiFi information in order to detect your presence in target
    building, and will also need your personal information to configure the firebase cloud firestore database which will store all of your data. Since Smart presence
    focuses on residential area, the address of your home is also needed. \n
        We promise that your information will not be exposed and accessed by anyone else. On top of that, your information will not be used for commercial use and we will
    guarantee the security of the database so that your personal information will be preserved. Moreover, you have the right to delete your account and all data. As a
    result, no copy of your data will be kept. \n
        By signing this agreement, you agree to grant all-time-positioning permission, stop the battery optimization for Smart Presence and potentially change settings
    dealing with devices from certain manufacturers. You agree to provide information about locations, address and email. You have read and understood all the sections
    written above.</string>
    <string name="finishSignIn">Finish</string>
    <string name="checkbox">Agree</string>
    <string name="locationPermission">Location permission page</string>
    <string name="stopBatteryOptimization">Stop battery optimization</string>
    <string name="manuallySettings"><![CDATA[If you haven\'t change the settings, please do it manually: grant all time positioning permission & stop battery optimization.]]></string>
    <string name="setting_account">Account</string>
    <string name="deleteDataButton">delete data</string>
    <string name="settingTimeOptions">Time Options</string>
    <string name="setting_working_time_interval">Working Time Interval (min):</string>
    <string name="setting_working_time_interval_description">The duration between two consecutive detections. If you are always away from home for a long time, you can
    choose a longer duration to save battery.</string>
    <string name="setting_start_time">Start time:</string>
    <string name="setting_stop_time">Stop time:</string>
    <string name="settingStartStopTimeDescription">You can choose when the detection will start or stop during a day. Please note that the stop time should come after the start time.</string>
    <string-array name="working_interval">
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
    </string-array>
    <string name="deleteDataMessage">You have successfully deleted you data stored in cloud database!</string>
    <string name="setting_daily_notification">Daily Notification</string>
    <string name="setting_daily_notification_description">Keep receiving daily notification</string>
    <string name="notificationOnMessage">You will receive a push notification at 14:00 everyday!</string>
    <string name="notificationOffMessage">You will no longer receive the daily push notification!</string>
    <string name="setting_language">Language</string>
    <string-array name="language">
        <item>English</item>
        <item>Italian</item>
        <item>Chinese</item>
    </string-array>
    <string name="setting_alert_title">Delete Confirmation</string>
    <string name="setting_alert_content">Are you sure you want to delete all your data stored in cloud database?</string>
    <string name="setting_alert_cancel">Cancel</string>
    <string name="setting_alert_confirm">Yes</string>
    <string name="configuration_menu">Configuration</string>
    <string name="fragment_wifi_checking_name">WiFi Checking</string>
    <string name="fragment_positioning_checking_name">Position Checking</string>
    <string name="fragment_manual_checking_name">Manual Checking</string>
    <string name="fragment_configuration_name">Configuration</string>
    <string name="ssid_input">SSID (WiFi Name)</string>
    <string name="bssid_input">BSSID (Unique ID)</string>
    <string name="update_wifi_info_button">Update WIFI information</string>
    <string name="update_wifi_info_description">If the current information is not correct or you don\'t know what should be inputted in the fields, please click the
        button to show the WiFi information about current WiFi connection, otherwise, please input manually.</string>
    <string name="address_input">Address of target building</string>
    <string name="update_address_button">Select from map</string>
    <string name="update_address_description">Click the button to select your target building from a map. In any case, please make sure the inputs are as same as
    those from users in the same target building.</string>
    <string name="max_occupancy_input">Maximum expected occupancy</string>
    <string name="max_occupancy_description">The maximum number of people staying in the target building.</string>
    <string name="save_menu">Save</string>
    <string name="configuration_confirm_title">Please confirm your configuration.</string>
    <string name="configuration_alert_confirm_button">Yes, confirmed</string>
    <string name="configuration_alert_toast">You have successfully configured your profile.</string>
    <string name="no_wifi_connection_message">Please make sure you are connecting to WiFi or input manually.</string>
    <string name="configuration_empty_input_message">Please do not leave empty space.</string>
    <string name="save_location_button">SAVE</string>
    <string name="map_fragment_name">Map</string>
    <string name="turn_on_location_message">Please turn on your location service.</string>
    <string name="map_error_message">Please restart your WiFi connection and location service.</string>
    <string name="success_location_save">You have successfully selected your location.</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">longitude</string>
    <string name="energySavingModeOnOff">Battery saving mode</string>
    <string name="energySavingModeAlertTitle">Energy Saving Mode</string>
    <string name="energySavingModeOnMessage">By turning on the battery saving mode, you will rely on the so-called geofence to detect presence, which is not accurate
    because it depends on the location update from other apps!</string>
    <string name="energySavingModeOffMessage">By turning off the battery saving mode, the accuracy of detection is increased, but you may experience quicker battery drop!</string>
    <string name="energySavingModeAlertButton">Understood</string>
    <string name="energySavingModeAlertNoButton">Do not change</string>
    <string name="alreadyStopBatteryOptimization">You have already turn off the battery optimization for this app.</string>
    <string name="alreadyGrantAllTimePositioningPermission">You have already granted the permission for this app.</string>
    <string name="introduction_text_main">
        Welcome to Smart Presence. The objective of this application is to detect your presence in target building and derive the building occupancy profile to help with
    your smart building management. In general, we provide three methods for you to choose: WiFi based method, positioning based method and manual method. \n \n
        WiFi based: the app will periodically compare the SSID (WiFi name) and BSSID (a unique ID assigned by the router) of your current WiFi connection with the target
    one configured by you so that you will be considered as being present if the they match. As a result, the app can derive the period of you staying or leaving the target
    building. \n \n
        Positioning based: the concept is that you will be considered as presence if you are within a certain range around the target building. In particular, the app can
    either periodically update your location with latitude and longitude to check your presence, which costs more battery or passively listen the location updates from other
    apps to trigger a geofence, which is less energy consumed. \n \n
        Manual method: you simply need to click the shortcuts provided by the app to check in or out anytime you entering or leaving the target building. It totally relies on
    your habits. \n \n
        We strongly suggest that before starting the services, go to setting page in which you can deal with your account, change the interval between two detections, change
    for what period during a day the service should work, determine whether to receive daily notification or not and change language. \n \n
        Finally, the app will work in the background and your data will be upload and stored in firestore database for further analysis.
    </string>
    <string name="startButton">Start</string>
    <string name="reStartButton">Restart</string>
    <string name="stopButton">Stop</string>
    <string name="showInfoButton">Show working status</string>
    <string name="introduction_more">If you have not grant the all time positioning permission and stop battery optimization, please do it manually.</string>
    <string name="introduction_plus">Furthermore, for devices from certain manufacturers, you may need to manually change some settings. Please check out here.</string>
    <string name="fragment_info_brand_name">Information For Different Devices</string>
    <string name="huawei_description">Huawei: even if you have disabled the battery optimization from the app, you still need to do it in your system setting page. Moreover,
    for older version of Huawei devices, the app works not perfectly due to intrinsic property of its customized Android system which significantly limit the background
    services, thus, please turn on the daily notification and re-start the service everyday or when you wakeup in the morning. However, for later version, due to the
    restriction of Google, the positioning based method does not work due to the fact that Google play service no longer supports Huawei.</string>
    <string name="samsung_description">Samsung: it does put some restrictions on background service so that please turn on the daily notification. On the other hand,
    you still need to manually grant the permission to run background service.</string>
    <string name="forget_password">Forget Password?</string>
    <string name="fieldRequiredMessage">This field is required.</string>
    <string name="fragment_detection_title">Presence Detection</string>
    <string name="radius_spinner">Radius(m) determining presence</string>
    <string name="radius_spinner_description">The radius that defines the range in which you will be considered as presence. The larger the value, the less energy consumed.</string>
    <string name="proFragmentTitle">Professional Actions</string>
    <string name="faqFragmentTitle">Questions&amp;Answers</string>
    <string name="blurViewText">Please stop the service that is running before changing any configurations!</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="old_p_str">Old password</string>
    <string name="new_p_str">New password</string>
    <string name="repeat_p_str">Repeat new password</string>
    <string name="confirm_p_str">Confirm</string>
</resources>