<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenceDetection.wifiBased.WifiConfigurationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_input"
                android:minHeight="40dp"
                app:endIconMode="clear_text"
                app:startIconContentDescription="temp"
                app:startIconDrawable="@drawable/ic_baseline_edit_location_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/address_required"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/fieldRequiredMessage"
                android:textColor="@color/pinkColor"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minHeight="40dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/latitude_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:hint="@string/latitude"
                    app:endIconMode="clear_text"
                    app:startIconContentDescription="temp"
                    app:startIconDrawable="@drawable/ic_baseline_add_location_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/longitude_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:hint="@string/longitude"
                    app:endIconMode="clear_text"
                    app:startIconContentDescription="temp"
                    app:startIconDrawable="@drawable/ic_baseline_add_location_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/location_required"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/fieldRequiredMessage"
                android:textColor="@color/pinkColor"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <Button
                android:id="@+id/update_address_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/browser_actions_bg_grey"
                android:text="@string/update_address_button"
                android:textColor="@android:color/black"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/update_address_description"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/max_occupancy_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/max_occupancy_input"
                android:minHeight="40dp"
                app:endIconMode="clear_text"
                app:startIconContentDescription="temp"
                app:startIconDrawable="@drawable/ic_baseline_people_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/maxOccupancy_required"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/fieldRequiredMessage"
                android:textColor="@color/pinkColor"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/max_occupancy_description"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/radius_spinner"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:ignore="RtlSymmetry" />

                <Spinner
                    android:id="@+id/radiusSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="end" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/radius_spinner_description"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <Switch
                android:id="@+id/energySavingModeOnOff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/energySavingModeOnOff"
                tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

    </ScrollView>

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blurView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/blurViewText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/blurViewText"
            android:textSize="25sp"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </eightbitlab.com.blurview.BlurView>

</RelativeLayout>