<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".others.ResetPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reset_password_title"
            android:textSize="25sp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/oldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_p_str"
            app:endIconMode="clear_text"
            app:startIconContentDescription="temp"
            app:startIconDrawable="@drawable/ic_baseline_password_24"
            android:layout_marginHorizontal="60dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgetPasswordBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textAlignment="textEnd"
            android:textColor="#616161"
            android:textSize="11sp"
            android:textStyle="normal"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_p_str"
            app:endIconMode="clear_text"
            app:startIconContentDescription="temp"
            app:startIconDrawable="@drawable/ic_baseline_password_24"
            android:layout_marginHorizontal="60dp"
            android:layout_marginBottom="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPasswordRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_p_str"
            app:endIconMode="clear_text"
            app:startIconContentDescription="temp"
            app:startIconDrawable="@drawable/ic_baseline_repeat_24"
            android:layout_marginHorizontal="60dp"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/confirmPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:text="@string/confirm_p_str"
            android:textAllCaps="false"
            android:textColor="@color/purple_700"
            android:textSize="15sp"
            app:iconTint="@color/purple_500"
            app:strokeColor="@color/purple_200"
            app:strokeWidth="1dp"
            tools:ignore="ButtonStyle"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>